@@ -22,6 +22,8 @@
                     { "name": "apple-windows-4", "platform": "win"},
 
                     { "name": "gtk-linux-slave-1", "platform": "gtk"},
+                    { "name": "gtk-linux-slave-2", "platform": "gtk"},
+                    { "name": "gtk-linux-slave-3", "platform": "gtk"},
 
                     { "name": "szeged-linux-1", "platform": "qt"},
 
@@ -95,6 +97,16 @@
                       "slavenames": ["gtk-linux-slave-1"]
                     },
                     {
+                      "name": "GTK Linux 32-bit Debug", "type": "BuildAndTest", "builddir": "gtk-linux-32-debug",
+                      "platform": "gtk", "configuration": "debug", "architectures": ["i386"],
+                      "slavenames": ["gtk-linux-slave-2"]
+                    },
+                    {
+                      "name": "GTK Linux 64-bit Debug", "type": "BuildAndTest", "builddir": "gtk-linux-64-debug",
+                      "platform": "gtk", "configuration": "debug", "architectures": ["x86_64"],
+                      "slavenames": ["gtk-linux-slave-3"]
+                    },
+                    {
                       "name": "Qt Linux Release", "type": "BuildAndTest", "builddir": "qt-linux-release",
                       "platform": "qt", "configuration": "release", "architectures": ["i386"],
                       "slavenames": ["szeged-linux-1"]
@@ -120,7 +132,8 @@
                       "builderNames": ["Tiger Intel Release", "Leopard Intel Release (Build)", "Leopard Intel Debug (Build)",
                                        "SnowLeopard Intel Release (Build)", "SnowLeopard Intel Leaks",
                                        "Windows Release (Build)", "Windows Debug (Build)",
-                                       "GTK Linux Release", "Qt Linux Release",
+                                       "GTK Linux Release", "GTK Linux 32-bit Debug", "GTK Linux 64-bit Debug",
+                                       "Qt Linux Release",
                                        "Chromium Win Release", "Chromium Mac Release", "Chromium Linux Release"]
                     },
                     { "type": "Triggerable", "name": "leopard-intel-release-tests",
